added scheduler/jobHandler WIP

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -96,6 +96,12 @@ auditing {
         }
     }
 }
+# FileUploadScheduler
+fileUploadPerInstancePerSecond = 5
+
+housekeepingHours = 12
+
+fileUploadMaxAgeMins = 30
 
 # Microservice specific config
 
@@ -238,6 +244,14 @@ microservice {
         datastream {
             host=localhost
             port=8100
+        }
+
+        ccs {
+            host = localhost
+            port = 9753
+            context-base = "/customs-financials-hods-stub"
+            endpoint = "/ccs/cds/documents"
+            bearer-token = "test1234567"
         }
     }
 }
