--- a/conf/application.conf
+++ b/conf/application.conf
@@ -29,6 +29,7 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandl
 
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 play.modules.enabled += "config.Module"
+play.modules.enabled += "config.SchedulerModule"
 
 # Play Modules
 # ~~~~
