--- a/conf/application.conf
+++ b/conf/application.conf
@@ -251,7 +251,7 @@ microservice {
             host = localhost
             port = 9753
             context-base = "/customs-financials-hods-stub"
-            endpoint = "/ccs/cds/documents"
+            endpoint = "/filetransfer/init/v1"
             bearer-token = "test1234567"
         }
     }
