changed ccs to dec64 in app.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -247,7 +247,7 @@ microservice {
             port=8100
         }
 
-        ccs {
+        dec64 {
             host = localhost
             port = 9753
             context-base = "/customs-financials-hods-stub"
