--- a/conf/application.conf
+++ b/conf/application.conf
@@ -104,6 +104,8 @@ housekeepingHours = 12
 
 fileUploadMaxAgeMins = 30
 
+fileUploadFailCount = 5
+
 # Microservice specific config
 
 microservice {
