MMCA-3449: Added connector for ACC40

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -192,6 +192,14 @@ microservice {
             serviceName="hods-acc37"
         }
 
+        acc40 {
+            host = localhost
+            port = 9753
+            context-base = "/customs-financials-hods-stub"
+            bearer-token = "test1234567"
+            serviceName="hods-acc40"
+        }
+
         sub21 {
             host = localhost
             port = 9753
