MMCA-3475 added acc41 connector & models WIP

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -189,7 +189,7 @@ microservice {
             port = 9753
             context-base = "/customs-financials-hods-stub"
             bearer-token = "test1234567"
-            serviceName="hods-acc37"
+            serviceName = "hods-acc37"
         }
 
         acc40 {
@@ -197,7 +197,15 @@ microservice {
             port = 9753
             context-base = "/customs-financials-hods-stub"
             bearer-token = "test1234567"
-            serviceName="hods-acc40"
+            serviceName = "hods-acc40"
+        }
+
+        acc41 {
+            host = localhost
+            port = 99753
+            context-base = "/customs-financials-hods-stub"
+            bearer-token = "test1234567"
+            serviceName = "hods-acc41"
         }
 
         sub21 {
