CDSR-2053 Update SBT and change tpi response

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@ node_modules/
 npm-debug.log
 yarn-debug.log
 yarn-error.log
+.bloop/
+.bsp/
+.metals/
+.vscode/
+project/.bloop/
+project/metals.sbt
