[MMCA- 4218] Add case classes and tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -260,6 +260,10 @@ microservice {
 mongodb {
     uri = "mongodb://localhost:27017/customs-financials-api"
     timeToLiveInSeconds = 2592000  #30x24x60x60 = 2592000
+    historic-document-request-search {
+             name = historic-document-request-search
+             timeToLiveInSeconds = 1728000  #20x24x60x60 = 1728000
+        }
 }
 
 features {
