[MMCA-4190] Add tests and code changes to return error response

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -117,6 +117,10 @@ microservice {
             serviceName="hods-acc24"
         }
 
+        ssfn {
+            bearer-token = "test1234567"
+        }
+
         acc27 {
             host = localhost
             port = 9753
