--- a/conf/application.conf
+++ b/conf/application.conf
@@ -27,6 +27,10 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandl
 
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 play.modules.enabled += "config.Module"
+play.filters.enabled += "play.filters.cors.CORSFilter"
+play.filters.cors {
+  allowedOrigins = ["http://localhost:9680"]
+}
 # Play Modules
 # ~~~~
 # Additional play modules can be added here
