[MMCA-4090_1_EBRenamed] Add tests and update error code for the error response

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -123,6 +123,7 @@ microservice {
 
         ssfn {
             bearer-token = "test1234567"
+            forwarded-host = "CDDM"
         }
 
         acc27 {
