MMCA-3994-Functioning happy path test, added read/write reponse tests, trimmed specs and updated applicationconf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -199,6 +199,14 @@ microservice {
             serviceName = "hods-acc41"
         }
 
+        secureMessage {
+            host = localhost
+            port = 9753
+            context-base = "/customs-financials-hods-stub"
+            bearer-token = "test1234567"
+            serviceName = "secureMessage"
+        }
+
         sub21 {
             host = localhost
             port = 9753
