MMCA-3994-Refactors to the connector, body messages and tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -201,8 +201,8 @@ microservice {
 
         secureMessage {
             host = localhost
-            port = 9753
-            context-base = "/customs-financials-hods-stub"
+            port = 9051
+            context-base = "/secure-messaging"
             bearer-token = "test1234567"
             serviceName = "secureMessage"
         }
