--- a/conf/application.conf
+++ b/conf/application.conf
@@ -174,6 +174,14 @@ microservice {
             serviceName = "hods-acc41"
         }
 
+        acc45 {
+            host = localhost
+            port = 9753
+            context-base = "/customs-financials-hods-stub"
+            bearer-token = "test1234567"
+            serviceName="hods-acc24"
+        }
+
         secureMessage {
             host = localhost
             port = 9051
