Mmca 4873 - New API - ACC45 - Create connector for Cash Account Statement Request (#101)
* MMCA-4873 : initial commit

* MMCA-4873 : cleaned up comments, added recover cases

* MMCA-4873 : fixed connector response types, added a test case

* MMCA-4873 : added test cases in controllers, service and models

* MMCA-4873 : fixed test cases

* MMCA-4873 : fixed error message

* MMCA-4873 : added test case and removed redundant case

* MMCA-4873 : fixed service name in app conf

* MMCA-4873 : fixed PR comments, added types to vals in test cases

* MMCA-4873: PR comment fixes 02

* MMCA-4873 : PR fixes 03

* MMCA-4873 : PR fixes 04

* MMCA-4873 : PR fixes 05

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -183,6 +183,14 @@ microservice {
             endpoint = "/accounts/cashaccounttransactionsearch/v1"
         }
 
+        acc45 {
+            host = localhost
+            port = 9753
+            context-base = "/customs-financials-hods-stub"
+            bearer-token = "test1234567"
+            serviceName="hods-acc45"
+        }
+
         secureMessage {
             host = localhost
             port = 9051
