DCWL-3996 | Add config for acc31 timeout

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -28,6 +28,14 @@ play.filters.enabled += "play.filters.cors.CORSFilter"
 play.filters.cors {
   allowedOrigins = ["http://localhost:9680"]
 }
+
+play.ws.timeout.request = 120.seconds
+
+play.ws.timeout.connection = 120.seconds
+
+ws.timeout.request = 20000
+ws.timeout.connection = 6000
+
 # Play Modules
 # ~~~~
 # Additional play modules can be added here
@@ -273,6 +281,10 @@ mongodb {
              name = historic-document-request-search
              timeToLiveInSeconds = 1728000  #20x24x60x60 = 1728000
         }
+}
+
+timeouts {
+    acc31 = 120000
 }
 
 features {
