--- a/conf/application.conf
+++ b/conf/application.conf
@@ -28,6 +28,8 @@ play.filters.enabled += "play.filters.cors.CORSFilter"
 play.filters.cors {
   allowedOrigins = ["http://localhost:9680"]
 }
+
+
 # Play Modules
 # ~~~~
 # Additional play modules can be added here
@@ -273,6 +275,10 @@ mongodb {
              name = historic-document-request-search
              timeToLiveInSeconds = 1728000  #20x24x60x60 = 1728000
         }
+}
+
+timeouts {
+    acc31 = 60000
 }
 
 features {
